[package]
authors = ["6543 <6543@obermui.de>"]
edition = "2018"
name = "telefon"
version = "0.1.0"
[dependencies]
chrono = "*"
pretty_env_logger = "0.4.0"
rusqlite = "*"
warp = "0.3.0"

[dependencies.serde]
features = ["derive"]
version = "1.0.123"

[dependencies.tokio]
features = ["full"]
version = "1.2.0"

[profile]
[profile.release]
lto = true
panic = "abort"
